--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,6 +1,7 @@
 plugins {
     id 'com.android.application'
     id 'kotlin-android'
+    id 'kotlin-android-extensions'
 }
 
 android {
@@ -38,6 +39,10 @@ dependencies {
     implementation Dependencies.android_core
     implementation Dependencies.app_compat
     implementation Dependencies.constraint_layout
+    implementation 'androidx.appcompat:appcompat:1.3.0'
+    implementation 'com.google.android.material:material:1.3.0'
+    implementation "org.jetbrains.kotlin:kotlin-stdlib:$kotlin_version"
+    implementation 'androidx.constraintlayout:constraintlayout:2.0.4'
     androidTestImplementation Dependencies.junit_androidx
     androidTestImplementation Dependencies.espresso_androidx
     implementation Dependencies.material_design
