--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -12,14 +12,19 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.MusicFinder">
-        <activity android:name=".ui.trackDetail.TrackDetailActivity"></activity>
-        <activity android:name=".ui.home.MainActivity">
+
+        <activity
+            android:name=".ui.home.MainActivity"
+            android:screenOrientation="portrait">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+        <activity
+            android:name=".ui.trackDetail.TrackDetailActivity"
+            android:screenOrientation="portrait" />
     </application>
 
 </manifest>
