--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,6 +9,7 @@
             android:label="@string/app_name"
             android:roundIcon="@mipmap/ic_launcher_round"
             android:supportsRtl="true"
+            android:name=".application.MusicFinderApplication"
             android:theme="@style/Theme.MusicFinder">
 
         <activity
@@ -23,6 +24,7 @@
         </activity>
         <activity
                 android:name=".ui.trackDetail.TrackDetailActivity"
+                android:exported="true"
                 android:screenOrientation="portrait" />
     </application>
 
