--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -1,16 +1,16 @@
 [versions]
 agp = "8.1.1"
-kotlin = "1.9.0"
+kotlin = "2.0.0"
 coreKtx = "1.13.1"
 junit = "4.13.2"
-junitVersion = "1.1.5"
-espressoCore = "3.5.1"
+junitVersion = "1.2.1"
+espressoCore = "3.6.1"
 appcompat = "1.7.0"
 material = "1.12.0"
-activity = "1.8.0"
+activity = "1.9.2"
 constraintlayout = "2.1.4"
-coroutinesCore = "1.4.1"
-coroutinesAndroid = "1.3.9"
+coroutinesCore = "1.6.1"
+coroutinesAndroid = "1.7.3"
 koin = "3.5.6"
 coil = "1.2.1"
 exoPlayer = "2.14.0"
@@ -19,6 +19,9 @@ okhttp3 = "4.7.2"
 okhttp3Interceptor = "4.7.2"
 moshi = "2.9.0"
 parcelize = "1.9.20"
+composeRuntime = "1.7.3"
+composeUi = "1.7.3"
+material3 = "1.3.0"
 
 [libraries]
 androidx-core-ktx = { group = "androidx.core", name = "core-ktx", version.ref = "coreKtx" }
@@ -38,9 +41,13 @@ retrofit = { module = "com.squareup.retrofit2:retrofit", version.ref = "retrofit
 okhttp3 = { module = "com.squareup.okhttp3:okhttp", version.ref = "okhttp3"}
 okhttp3-interceptor = { module = "com.squareup.okhttp3:logging-interceptor", version.ref = "okhttp3Interceptor"}
 moshi = { module = "com.squareup.retrofit2:converter-moshi", version.ref = "moshi"}
+compose-runtime = { module = "androidx.compose.runtime:runtime", version.ref = "composeRuntime"}
+compose-ui = { module = "androidx.compose.ui:ui", version.ref = "composeUi"}
+androidx-material3 = { group = "androidx.compose.material3", name = "material3", version.ref = "material3" }
 
 [plugins]
 android-application = { id = "com.android.application", version.ref = "agp" }
 jetbrains-kotlin-android = { id = "org.jetbrains.kotlin.android", version.ref = "kotlin" }
 android-library = { id = "com.android.library", version.ref = "agp" }
 jetbrains-kotlin-parcelize = { id = "org.jetbrains.kotlin.plugin.parcelize", version.ref = "parcelize" }
+compose-compiler = { id = "org.jetbrains.kotlin.plugin.compose", version.ref = "kotlin" }
