--- a/.gitignore
+++ b/.gitignore
@@ -7,8 +7,10 @@
 /.idea/workspace.xml
 /.idea/navEditor.xml
 /.idea/assetWizardSettings.xml
+out
 .DS_Store
-/build
+build/
+logs
 /captures
 .externalNativeBuild
 .cxx
